# aulas

./: .gitignore  README.md  iot.7z
algoritmos_wirth/: Makefile  shakesort  shakesort.c
analise-otim-algs/: metodo-analitico.md  prog-linear.py  programacao-linear.md
anotacoes/: cidades.txt  embedded-referencias.txt  jonathan-102134.txt  variacoes-linguisticas.md
circuitos/: circuit-20240404-2031.circuitjs.txt  circuitos-marco.md  circuitos.md  lab.md  prova1.md
compilers-dragao/: go.mod
configuracoes/: theme.jsonc
csapp/: p2.8  t.c
design-patterns/: lex-study-case.md  readme.md
diversos/: produtos.csv  teste.csv  teste.json  teste.py  teste2.json  teste3.csv
eloquent-js/: query_selector.html
estrutura-dados/: Exercício_ListaSequencial.cpp  GERA_DADOSSEQ.h  GERA_DADOSSEQ.h.gch  MODELOSEQ.h  diamantes_areia.c  diamantes_regex.c
exerciciosSICP/: Diagrama sem nome.drawio  EX1.3.sc  constraint-based-circuits.rkt  cycle-list.drawio  ex3-14.rkt  ex3-16.rkt  ex3-17.rkt  ex3-20.rkt  ex3-21.rkt  ex3-22.rkt  ex3-23.rkt  ex3-25.rkt  ex3-47.rkt  ex3-48.rkt  ex3.13.rkt  sicp-ex3-15.rkt  sicp-ex3-17.rkt  sicp-ex3-18.rkt  simulator-for-digital-circuits.rkt  tables.rkt
fabrica-software/: HashTable.py  ListaDinamica.py  ListaDinamicaMelhorada.py  TesteHashTable.py  TestePerformanceHashTable.py  (+4 more)
fabrica-software/estruturas-diversas/: pyproject.toml
fabrica-software/estruturas-diversas/src/: DinamicArray.py  HashTable.py  HashTable2.py  TesteFuncUtils.py  TesteHashTable.py  TestePerformanceHashTable.py  config.py  teste.txt  teste1.txt  teste2.txt  testes.txt
(+389 files in other folders)
