[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estruturas-diversas-djudju12"
version = "0.0.1"
authors = [
  { name="Jonathna Santos", email="jwsantos@mx2.unisc.br" },
]
description = "Estruturas de dados criadas por motivos academicos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/djudju12/aulas"